@@ -345,7 +345,10 @@ class TestDDLSync:
             TEST_LOCAL_COLLECTION_NAME1 in database_on_secondary.list_collection_names()
         )
         database_on_secondary.drop_collection(TEST_LOCAL_COLLECTION_NAME1)
-        sync_database.drop_collection(col2_on_secondary)
+        sync_database.drop_collection(
+            col2_on_secondary.name,
+            keyspace=data_api_credentials_info["secondary_keyspace"],
+        )
         assert (
             TEST_LOCAL_COLLECTION_NAME1
             not in database_on_secondary.list_collection_names()
